--- a/.env
+++ b/.env
@@ -1,13 +1,13 @@
-DATABASE = sql12722686
-DATABASE_HOST =  sql12.freesqldatabase.com
-DATABASE_USER = sql12722686
-DATABASE_PASSWORD= v1Wr8MERzk
-SESSION_SECRET=Lungelo12@.
+DATABASE = ""
+DATABASE_HOST =  
+DATABASE_USER = 
+DATABASE_PASSWORD= 
+SESSION_SECRET=
 
 
-EMAIL_USER=muzinkambule789@gmail.com
-EMAIL_PASS=Lungelo12@.
-TWILIO_SID=AC10202e93184cd92359d0a613071ed7b2
-TWILIO_AUTH_TOKEN=557843463c5203aa6f8c1671a2501232
-TWILIO_PHONE_NUMBER=+12085516320
+EMAIL_USER=
+EMAIL_PASS=
+TWILIO_SID=
+TWILIO_AUTH_TOKEN=
+TWILIO_PHONE_NUMBER=
 
